Update rtb.sh
rebuild the backup time system and added more restart securities.
Like restart on "/stop" command ingame.